# base_fastapi_project

./: .gitignore  README.md  pyproject.toml
docs/: pdm.md  ruff.md
